examples/test/testpolicy13676.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13676
  namespace: namespace23
spec:
  podSelector:
    matchLabels:
      key39: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value31
          key14: value10
      podSelector:
        matchLabels:
          key22: value3
          key35: value3
